kubernetes_templates/networking/networkpolicy-1.yaml
#https://kubernetes.io/docs/concepts/services-networking/network-policies/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:  ## from specific CIDR
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector: ## from specific Label
        matchLabels:
          project: myproject
    - podSelector: ## from specific POD
        matchLabels:
          role: frontend
    ports: ## from specific Port
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock: # to Specific CIDR
        cidr: 10.0.0.0/24
    ports: # Open specific output Port
    - protocol: TCP
      port: 5978

## Default deny all ingress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

## Defulat allow all ingres traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress

# Default deny all egress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress

## Defaulkt allow all egress traffic
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
